--- a/TAREA4/Makefile
+++ b/TAREA4/Makefile
@@ -1,7 +1,7 @@
 all: client server
 
-program1: client.c
-	gcc -o client client.c
+program1: client.c t3.c
+	gcc -o client client.c t3.c
 
-program2: server.c
-	gcc -o server server.c
+program2: server.c t3.c
+	gcc -o server server.c t3.c
